--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
                         <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
                     </ul>
-                    <a class="mobileView" href="#" class="cta__btn">Join Now</a>
+                    <a class="mobileView join__now " href="#" class="cta__btn">Join Now</a>
                 </nav>
                 <div class="cta desktopView">
                     <a href="#" class="cta__btn desktopView">Join Now</a>
